# kindle2pdf

./: .coderabbit.yaml  .gitignore  MVV.md  README.ja.md  README.md  config.example.yaml  package-lock.json  package.json  pyproject.toml
.claude/: CLAUDE.md  vibecorp.yml
.github/workflows/: test.yml  vibehawk-chat.yml  vibehawk-review-skip-mark.yml  vibehawk-review.yml
cli/: index.mjs
cli/lib/: args.mjs  capture.mjs  config.mjs  mode.mjs  prefs.mjs  progress.mjs  runner.mjs  runs.mjs
cli/test/: args.test.mjs  capture.test.mjs  config.test.mjs  entry.test.mjs  mode.test.mjs  prefs.test.mjs  progress.test.mjs  runner.test.mjs  runs.test.mjs
docs/: POLICY.md  SECURITY.md  ai-organization.md  cost-analysis.md  design-philosophy.md  specification.md
docs/kindle2pdf/: 00_overview.md  01_spec-design.md  02_implementation-plan.md
src/kindle2pdf/: __init__.py  __main__.py  build_pdf.py  capture.py  cli.py  config.py  imaging.py  naming.py  ocr.py  pipeline.py  preprocess.py  progress.py  state.py
tests/: test_build_pdf.py  test_build_pdf.sh  test_calibrate.py  test_calibrate.sh  test_capture.py  test_cli.py  test_cli.sh  test_config.py  test_finishing.py  test_imaging.py  test_node_cli.sh  test_ocr.py  test_pipeline.py  test_pipeline.sh  test_preprocess.py  test_preprocess.sh  test_progress.py  test_smoke.sh  test_titlebar_crop.py
tests/fixtures/: README.md
