[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kindle2pdf"
version = "0.1.0"
description = "購入済みKindle本をMac上でスクショ→OCR→検索可能PDF化するフル自動システム"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "pillow>=10",       # 画像処理
  "imagehash>=4.3",   # pHash（重複/最終ページ検出）
  "reportlab>=4",     # PDFの画像＋透明テキスト層
  "pypdf>=4",         # PDF結合・メタデータ
  "pyyaml>=6",        # 設定
  "click>=8",         # CLI
]

# Apple Vision OCR・ウィンドウ検出・AX は macOS 専用。非macでは import 時に失敗するため extra に分離する。
[project.optional-dependencies]
macos = [
  "ocrmac>=1.0",                               # Apple Vision OCR
  "pyobjc-framework-Quartz>=10",               # CGWindowList でウィンドウ ID 検出（screencapture -l 用）
  "pyobjc-framework-ApplicationServices>=10",  # AX でタイトルバー高さを実測し上端を動的クロップ
]
dev = ["pytest>=8"]

[project.scripts]
kindle2pdf = "kindle2pdf.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kindle2pdf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
